--- a/allpages/login.html
+++ b/allpages/login.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <a href="index.html"><img src="../images/Yelp_Logo_color.png" alt="" id="logo"></a>
+    <a href="../index.html"><img src="../images/Yelp_Logo_color.png" alt="" id="logo"></a>
     <br><br><br><br><hr><br><br><br><br><br><br><br>
-    <form action="" ></form>
+    <form action="" >
     <div id="mainform">
         <h4>Log In to Yelp</h4>
         <h6>New to Yelp?<a href="signup.html">Sign up</a></h6>
@@ -22,11 +22,12 @@
         <button type="button" class="btn btn-light" id="google"><img src="../images/googlelogo.png" alt="">Continue With Google</button>
         <br><button type="button" class="btn btn-dark" id="apple"><img src="../images/applelogo.png" alt=""> Continue With Google</button>
         <hr class="horizontal-line"><div ><p id="or">OR</p></div>
-        <input type="text" class="form-control" placeholder="Email"><br>
-        <input type="password" class="form-control" placeholder="password" id="passfield">
+        <input type="text" required class="form-control" placeholder="Email"><br>
+        <input type="password" required class="form-control" placeholder="password" id="passfield">
         <div class="ending"><a href=""><p>Forgot password?</p></a></div>
-        <button type="button" class="btn btn-dark" id="loginbtn">Login</button>
+        <button type="submit"class="btn btn-dark" id="loginbtn">Login</button>
         <div class="ending"><p>New to Yelp? <a href="signup.html">Sign up</a></p></div>
+    </form>
     </div>
     <img src="../images/loginhero.png" alt="" id="loginh">
     <footer class="index-footer">
