--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         <img src="images/headcontainer.png" alt="">
     </div>
     <a href="index.html"><img src="images/Yelp_Logo.png" alt="" id="logo"></a>
-    <div id="herodiv">
-        <div></div>
-        <img src="images/soup.jpg" alt="spaghetti-image" id="heroimg">
-    </div>
+    
     <div id="search">
         <input type="text" placeholder="things to do!">
         <a href=""><img src="images/search-icon.png" alt=""></a>
@@ -59,17 +56,23 @@
             <button type="button" id="signupbtn"><span>Sign Up</span></button>
         </a>
     </div>
-    <div id="heroopt1">
-        <img src="images/heroopt.png" alt="">
-    </div>
-    <div id="heroopt2">
-        <img src="images/heroopt.png" alt="">
-    </div>
-    <div id="heroopt3">
-        <img src="images/heroopt.png" alt="">
-    </div>
-    <div id="heroopt4">
-        <img src="images/heroopt.png" alt="">
+    <div id="allhero">
+        <div id="herodiv">
+            <div></div>
+            <img src="images/soup.jpg" alt="spaghetti-image" id="heroimg">
+        </div>
+        <div id="heroopt1">
+            <img src="images/heroopt.png" alt="">
+        </div>
+        <div id="heroopt2">
+            <img src="images/heroopt.png" alt="">
+        </div>
+        <div id="heroopt3">
+            <img src="images/heroopt.png" alt="">
+        </div>
+        <div id="heroopt4">
+            <img src="images/heroopt.png" alt="">
+        </div>
     </div>
     <div class="dropdown" id="dd2">
         <a class="btn btn-trasparent dropdown-toggle" id="ddb" href="#" role="button" data-bs-toggle="dropdown"
